Replace double dashes with a 'em dash'

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -137,7 +137,7 @@
                 {
                     "Title": "Current Projects",
                     "Paragraphs": [
-                        "This approach of Count Me In enables building and deeply studying cohorts of patients not only within one cancer type, but also that cut across cancer types -- such as all patients who receive a particular therapy, such as immunotherapy; or patients within a particular age group, such as adolescents and young adults. Count Me In has built and will continue to build research initiatives around different patient populations and cohorts. As more people join, there will be more opportunities to launch deeper studies within more patient cohorts."
+                        "This approach of Count Me In enables building and deeply studying cohorts of patients not only within one cancer type, but also that cut across cancer types &#8212; such as all patients who receive a particular therapy, such as immunotherapy; or patients within a particular age group, such as adolescents and young adults. Count Me In has built and will continue to build research initiatives around different patient populations and cohorts. As more people join, there will be more opportunities to launch deeper studies within more patient cohorts."
                     ],
                     "Links": [
                         { "key": "Angio", "label": "Angiosarcoma Project" },
