--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -403,7 +403,7 @@
             }
         },
         "LmsPage": {
-            "Title": "[ES]<span>Enrolling Soon:</span> <span>The Leiomyosarcoma (LMS) Project</span>",
+            "Title": "<span>Enrolling Soon:</span> <span>The Leiomyosarcoma (LMS) Project</span>",
             "IntroductionSection": {
                 "Title": "Have a direct impact on the future of leiomyosarcoma.",
                 "Text": "If you have ever been diagnosed with leiomyosarcoma, join a movement of patients to contribute your samples, medical records, and experiences to LMS research. Together, we can speed the development of future therapies.",
