DDP-6730 add participant

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -507,7 +507,8 @@
             "ShowPanel": "Show",
             "HidePanel": "Hide",
             "UserLabel": "You",
-            "ChildLabel": "Your child"
+            "ChildLabel": "Your child",
+            "RemoveParticipant": "Remove participant {{participant}}"
         },
         "Password": {
             "Title": "Please enter the password",
