--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -478,14 +478,14 @@
     },
     "Toolkit": {
         "AgeUpThankYou": {
-            "Title": "[es]Thank you!",
-            "EmailVerified": "[es]Your email address has been verified. We will be sending an email with more information on re-consent shortly after your birthday.",
+            "Title": "[ES]Thank you!",
+            "EmailVerified": "[ES]Your email address has been verified. We will be sending an email with more information on re-consent shortly after your birthday.",
             "EmailCollected": {
-                "TextPt1": "[es]An email will be sent to your child to confirm their address and tell them about the upcoming re-consent process. If you need to change the email you provided for your child, please contact the project team at",
-                "TextPt2": "[es]or",
-                "Button": "[es]Go to Dashboard"
+                "TextPt1": "[ES]An email will be sent to your child to confirm their address and tell them about the upcoming re-consent process. If you need to change the email you provided for your child, please contact the project team at",
+                "TextPt2": "[ES]or",
+                "Button": "[ES]Go to Dashboard"
             },
-            "ImageAlt": "[es]Email sent"
+            "ImageAlt": "[ES]Email sent"
         },
         "StayInformed": {
             "Title": "¡Manténgase Informada/o!",
