--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -499,7 +499,8 @@
             "ShowPanel": "Mostrar",
             "HidePanel": "Esconder",
             "UserLabel": "Usted",
-            "ChildLabel": "Su hijo(a)"
+            "ChildLabel": "Su hijo(a)",
+            "RemoveParticipant": "[ES]Remove participant {{participant}}"
         },
         "Password": {
             "Title": "Ingrese la contraseña.",
