DDP-6803 Add Colon Cancer Stars logo to colorectal page

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -393,7 +393,8 @@
                     "Raymond": "Raymond Foundation",
                     "GICAlliance": "GI Cancers Alliance",
                     "CCCanada": "Colorectal Cancer Canada",
-                    "FightCC": "Fight Colorectal Cancer"
+                    "FightCC": "Fight Colorectal Cancer",
+                    "ColonCancerStars": "Colon Cancer Stars logo"
                 },
                 "Text": "For more information on how to become a partner for the Colorectal Cancer Project, contact the team at <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
             },
