--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -391,7 +391,8 @@
                     "Raymond": "Raymond Foundation",
                     "GICAlliance": "GI Cancers Alliance",
                     "CCCanada": "Colorectal Cancer Canada",
-                    "FightCC": "Fight Colorectal Cancer"
+                    "FightCC": "Fight Colorectal Cancer",
+                    "ColonCancerStars": "Colon Cancer Stars logo"
                 },
                 "Text": "Para obtener más información sobre cómo participar en el Proyecto de cáncer colorrectal, comuníquese con el equipo en <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
             },
