--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -394,7 +394,8 @@
                     "GICAlliance": "GI Cancers Alliance",
                     "CCCanada": "Colorectal Cancer Canada",
                     "FightCC": "Fight Colorectal Cancer",
-                    "ColonCancerStars": "Colon Cancer Stars logo"
+                    "ColonCancerStars": "Colon Cancer Stars logo",
+                    "GCCA": "Global Colon Cancer association logo"
                 },
                 "Text": "For more information on how to become a partner for the Colorectal Cancer Project, contact the team at <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
             },
