--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -392,7 +392,8 @@
                     "GICAlliance": "GI Cancers Alliance",
                     "CCCanada": "Colorectal Cancer Canada",
                     "FightCC": "Fight Colorectal Cancer",
-                    "ColonCancerStars": "Colon Cancer Stars logo"
+                    "ColonCancerStars": "Colon Cancer Stars logo",
+                    "GCCA": "Global Colon Cancer association logo"
                 },
                 "Text": "Para obtener más información sobre cómo participar en el Proyecto de cáncer colorrectal, comuníquese con el equipo en <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
             },
