--- a/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
@@ -150,7 +150,7 @@
             "Name": "What benefits are there to participating in this project?",
             "Answers": [
               "By participating, you will be contributing to discoveries on the clinical and genetic aspects of Brugada syndrome that may benefit individuals with this condition as a whole. However, there are no direct benefits to you for participating in this project. If interested, you may receive notice about publications based off of data collected for this project.",
-              "We may also share research progress and discoveries, in aggregate, which you can access by signing up for our mailing list or checking our website. You will not receive your genetic data as a result from the study."
+              "We may also share research progress and discoveries, in aggregate, which you can access by signing up for our <a class=\"underlined-link mailing-list-toggle\">mailing list</a> or checking our website. You will not receive your genetic data as a result from the study."
             ]
           },
           {
@@ -166,7 +166,7 @@
             ]
           },
           {
-            "Name": "Can I withdraw my participation from this project at anytime?",
+            "Name": "Can I withdraw my participation from this project at any time?",
             "Answers": [
               "Yes. You may withdraw from this study if you decide to change your mind in the future. Your genetic and medical data will not be included in any additional research studies moving  forward, and your information, including records and genetic data, will be destroyed."
             ]
@@ -211,7 +211,7 @@
             "Name": "I don’t have Brugada syndrome, but I was diagnosed with another inherited heart rhythm condition. Can I still participate?",
             "Answers": [
               "We are happy to hear your interest! But for the first phase of our project, we are only recruiting patients who have been diagnosed with Brugada syndrome. However, we expect to recruit patients with other inherited heart rhythm conditions in the future.",
-              "If you are interested in participating in a future project that is specifically related to your inherited heart condition, please consider checking our website periodically or signing up for our mailing list as we will update these when future projects become available."
+              "If you are interested in participating in a future project that is specifically related to your inherited heart condition, please consider checking our website periodically or signing up for our <a class=\"underlined-link mailing-list-toggle\">mailing list</a> as we will update these when future projects become available."
             ]
           }
         ]
