DDP-6816 remove empty participants

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -503,8 +503,7 @@
             "ShowPanel": "Show",
             "HidePanel": "Hide",
             "UserLabel": "You",
-            "ChildLabel": "Your child",
-            "RemoveParticipant": "Remove participant {{participant}}"
+            "ChildLabel": "Your child"
         },
         "Password": {
             "Title": "Please enter the password",
