--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -165,7 +165,8 @@
                 "ZSOF": "The Zach Sobiech Osteosarcoma Fund logo",
                 "BoD": "Because Of Daniel logo",
                 "OsCollaborative": "The Osteosarcoma Collaborative logo",
-                "TCF": "Target Cancer Foundation logo"
+                "TCF": "Target Cancer Foundation logo",
+                "MCAMF": "Mason Chandler Allen Memorial Foundation logo"
             }
         },
         "SocialMediaSection": {
