--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -31,15 +31,15 @@
     },
     "Footer": {
         "Navigation": {
-            "Home": "[es]Home",
-            "AboutUs": "[es]About Us",
-            "Apply": "[es]Apply",
-            "Back": "[es]Back to Top"
+            "Home": "Página principal",
+            "AboutUs": "Quiénes somos",
+            "Apply": "Solicitud",
+            "Back": "Volver arriba"
         },
         "Address": {
-            "Text": "[es]Contact Us:",
-            "Line1": "[es]Broad Institute of MIT and Harvard",
-            "Line2": "[es]415 Main Street, Cambridge, MA 02142 United States"
+            "Text": "Comuníquese con nosotros:",
+            "Line1": "Broad Institute of MIT and Harvard",
+            "Line2": "415 Main Street, Cambridge, MA 02142 United States"
         },
         "FacebookAlt": "[es]Facebook"
     },
@@ -1203,7 +1203,7 @@
             "Logout": "[es]LOG OUT"
         },
         "SignInOut": {
-            "SignIn": "[es]Sign In",
+            "SignIn": "Ingresar",
             "SignOut": "[es]Sign Out"
         },
         "UserActivities": {
